REF Delete field username from Account and use instead off the email (for login we must use email!) ADD Manage roles wrt an organization FIX Bug NullPointerException on creationDate: when create a user and immediately after the same user was modified FIX Bug logic: when an account was be insert ad sandEmail was false, the password wasn't encrypted FIX ShortAccountDTO as abstract class
TODO Factorize bootstrap into a single class test